--- a/home/Procurement Officer/template.css
+++ b/home/Procurement Officer/template.css
@@ -89,9 +89,9 @@ nav {
 }
 .li-sidenav {
     left: 0px; right: 0px;
-    font-family: 'Calibri';
-    font-size: 17;
-    font-weight: 1;
+    font-family: 'Arial';
+    font-size: 15;
+    font-weight: regular;
     letter-spacing: 1px;
     font-weight: 1;
 }
@@ -118,15 +118,16 @@ img.icons {
 
 /**TABS**/
 #tabbed {
-    width: 100%;
-    height:70%;
+    width: 80%;
+    height:10%;
     min-width: 400px;
-    margin-top: 2.9%;
+    margin-top: 3.6%;
     margin-left: 19.8%;
     overflow: hidden;
     transition: border 250ms ease;
     position: relative;
     z-index: 1000;
+
 }
 
 #tabbed ul {
