--- a/signIn.css
+++ b/signIn.css
@@ -14,7 +14,7 @@ body {
 }
 
 #icon {
-    background: url(res/N.png);
+    background: url(./icons/N.png);
     margin-left: auto;
     margin-right: auto;
     width: 158px;
@@ -77,7 +77,23 @@ h1 {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 13px;
+    font-size: 14px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-radius: 15px;
+}
+
+.supp-btn{
+    margin-left: 3.5%;
+    margin-top: 3%;
+    background-color: transparent;
+    border-radius: white;
+    border-width: thin;
+    color: white;
+    padding: 14px 34px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-radius: 15px;
 }
@@ -87,4 +103,52 @@ h1 {
     color: white;
     border:#4CAF50;
     border-width: thin;
+}
+
+/**SUPPLIER**/
+
+.supplier {
+    background-color:black;
+    opacity: 0.5; 
+    height: 15%;
+    width: 55%;
+    position: relative;
+    margin-top: 10%;
+    margin-left: 5%;
+    z-index: -1;
+    border-radius: 25px;
+}
+
+p {
+    font-family: TW Cen MT;
+    color: white;
+    letter-spacing: 7px;
+    position: relative;
+    margin-top: -4.5%;
+    margin-left: 8%
+}
+
+#supp-code {
+    position: relative;
+    margin-left: 20%;
+    margin-top: -4%;
+    width:25%;
+}
+
+.code-btn {
+    position: relative;
+    margin-left: 4%;
+    height: 1.5vw;
+    width: 1.5vw;
+    border-style: solid;
+    border-color: white;
+    border-width: 0px 1px 1px 0px;
+    transform: rotate(-45deg);
+    transition: border-width 150ms;
+    background-color: transparent;
+}
+
+.code-btn:hover {
+    border-bottom-width: 3px;
+    border-right-width: 3px;
 }
