--- a/signIn.css
+++ b/signIn.css
@@ -14,7 +14,7 @@ body {
 }
 
 #icon {
-    background: url(./icons/N.png);
+    background: url("./res/N.png");
     margin-left: auto;
     margin-right: auto;
     width: 158px;
