--- a/home/Head or Manager/tab-layout.css
+++ b/home/Head or Manager/tab-layout.css
@@ -1,7 +1,7 @@
 #title {
     position: relative;
-    margin-top: 1%;
-    margin-left: 22%;
+    margin-top: 122px;
+    margin-left: 300px;
     font-family: "Arial";
     color: black;
     font-size: 22;
