--- a/home/Employee/tab-layout.css
+++ b/home/Employee/tab-layout.css
@@ -1,11 +1,13 @@
+
+/** ---------------------------ASSETS - VIEW LIST ASSETS---------------------------**/
 #title {
     position: relative;
-    margin-top: 122px;
+    margin-top: 135px;
     margin-left: 300px;
     font-family: "Arial";
     color: black;
     font-size: 22;
-
+    width: 500px;
 }
 
 #details {
@@ -18,7 +20,8 @@
     height: 5%;
     width: 78%;
     background-color:white;
-    margin-left: 22%;
+    margin-left: 300px;
+    margin-top: 10px;
 }
 
 th {
@@ -36,4 +39,207 @@ td {
 
 tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+
+/** ---------------------------ASSETS - REQUEST ITEM---------------------------**/
+#container {
+    margin-left: 308px;
+    margin-top: -5px;
+    width: 75%;
+    min-height: 100px;
+}
+
+#item {
+    margin-top: -5px;
+    background-color: white;
+    width: 246px;
+    height: 350px;
+    position: inline-block;
+    float: left;
+}
+
+#item:hover {
+    border: 1px solid #e7e7e7;
+}
+
+.export-btn {
+    text-decoration: none;
+    float: right;
+    margin-right: 55px;
+    margin-top:-65px;
+    background-color: #4CAF50;
+    border-radius: rgb(70, 158, 73);
+    color: white;
+    border-width: thin;
+    padding: 12px 30px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 13px;
+    border-radius: 15px;
+}
+
+.export-btn:hover {
+    background-color: rgb(68, 155, 70);
+    color: white;
+}
+
+.req-btn {
+    float: right;
+    margin-right: 220px;
+    margin-top:-65px;
+    background-color: #4CAF50;
+    border-radius: rgb(70, 158, 73);
+    color: white;
+    border-width: thin;
+    padding: 12px 30px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 13px;
+    border-radius: 15px;
+}
+
+.req-btn:hover {
+    background-color: rgb(68, 155, 70);
+    color: white;
+}
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+    color: white;
+}
+
+.item-img {
+    width: 150;
+    height: 200;
+    position: relative;
+    margin-top: 15px;
+    margin-left: 55px;
+}
+
+.item-desc {
+    width: 215px;
+    margin-left:23px;
+    margin-top: 8px;
+    font-family: 'Verdana';
+    font-size: 12;
+}
+
+.no-orders {
+    width: 215px;
+    margin-left:23px;
+    margin-top: 5px;
+    font-family: 'Verdana';
+    font-size: 12;
+    color: rgb(145, 144, 144);
+}
+
+.ipt-orders {
+    background-color: transparent;
+    color: black;
+    outline: none;
+    outline-style: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid #eeeeee 1px;
+    padding: 10px 10px;
+    text-align: left;
+}
+
+/** ---------------------------REQUEST LIST---------------------------**/
+.table {
+    display: table;
+    background-color: #ffffff;
+}
+.row {
+    display: table-row;
+    height: 50px;
+
+}
+.cell {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: none;
+    font-size: 15px;
+    color: black;
+    margin-left: 10px;
+    padding: 12px;
+    width: 900px;
+}
+
+.row:hover {
+    background-color: #cccccc;
+}
+.cell:hover {
+    background-color: #cccccc;
+}
+
+/** ---------------------------TRANSFER---------------------------**/
+
+.Reqitem-container {
+    margin-top: -15px;
+    margin-left: 310px;
+    background: white;
+    font-size: 17px;
+    border: none;
+    min-height: 100px;
+    width: 480px;
+}
+
+.preview-right {
+    position: relative;
+    float: right;
+    margin-right: 20px;
+    margin-top: -200px;
+    background: white;
+    font-size: 17px;
+    border: none;
+    min-height: 600px;
+    width: 500px;
+}
+
+.search-container {
+    margin-top: -15px;
+    margin-left: 310px;
+    background: white;
+    font-size: 17px;
+    border: none;
+    height: 300px;
+    width: 480px;
+}
+
+.search {
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 420px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    opacity: 0.5;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('./icons/search.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+
+.transfer-form {
+    text-decoration: none;
+    margin-top:-350px;
+    margin-left: 650px;
+    background-color: #4CAF50;
+    border-radius: rgb(70, 158, 73);
+    color: white;
+    border-width: thin;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    border-radius: 15px;
+}
+
+.transfer-btn:hover {
+    background-color: rgb(68, 155, 70);
+    color: white;
 }
